# BDUQ

./: .coverage  .gitignore  pyproject.toml
.github/: copilot-instructions.md
migrations/: env.py
migrations/versions/: 1_add_last_modified_to_doentes.py  c09ffe49f37c_create_doentes_table.py
tests/: conftest.py  test_app.py  test_database.py  test_db.py
the_wicker_man/: app.py  database.py  models.py  schemas.py  settings.py
